# stm32-platform-refactor

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: c-cpp.yml
03_Firmware/: .gitignore  CLAUDE.md
03_Firmware/00_Bootloader/: .gitignore  STM32F411XX_BOOTLOADER_FLASH.ld
03_Firmware/00_Bootloader/Core/Inc/: flash.h  iwdg.h  spi.h
03_Firmware/00_Bootloader/Core/Src/: flash.c  iwdg.c  spi.c  uart.c
03_Firmware/00_Bootloader/Middlewares/RTT/: SEGGER_RTT_Conf.h
03_Firmware/01_APP/: .gitignore  CLAUDE.md  Makefile  README.md  STM32F411XX_FLASH.ld  helloworld.ioc
03_Firmware/01_APP/00_Config/: README.md
03_Firmware/01_APP/00_Config/inc/: cfg_storage.h  cfg_touch.h
03_Firmware/01_APP/01_APP/: README.md
03_Firmware/01_APP/01_APP/Service_Adapters/: uart1_ota_transport.c  w25q64_ota_storage.c
03_Firmware/01_APP/01_APP/User_Init/: user_init.c
03_Firmware/01_APP/01_App/: README.md
03_Firmware/01_APP/01_App/User_Init/: user_init.c  user_init.h
03_Firmware/01_APP/02_Common_Platform/: README.md
03_Firmware/01_APP/02_Common_Platform/inc/: platform_error.h  platform_type.h
03_Firmware/01_APP/02_MCU_Platform/: README.md
03_Firmware/01_APP/02_OS_Platform/: README.md
03_Firmware/01_APP/03_Config/: README.md
03_Firmware/01_APP/03_Config/inc/: cfg_ota.h
03_Firmware/01_APP/05_Common_Utils/: README.md
03_Firmware/01_APP/05_Debug_Tool/: README.md
03_Firmware/01_APP/Tools/: aes_xref  aes_xref.c  build_summary.py  flash.py  mem_report.py  ota_encrypt.py  pack_assets.py  pyproject.toml
03_Firmware/01_APP/Tools/segger/jflash/: stm32f411ce.jflash
(+367 files in other folders)
