[project]
name = "app-tools"
version = "0.2.0"
requires-python = ">=3.9"
# pycryptodome: AES-256-CBC for ota_encrypt.py. mem_report / build_summary
# stay stdlib-only — they just share the same uv-managed virtualenv.
dependencies = [
    "pycryptodome>=3.20",
]

# Tools/ is not an installable package — just a deps + scripts container
# consumed by `uv run`. Disable build-system to keep uv from trying to
# wheel-build the project on every sync.
[tool.uv]
package = false
